@@ -1,5 +1,6 @@
 2010-03-04 Harri Pitkänen <hatapitk@iki.fi>
-	* Implement NullAnalyzer.
+	* Allow specifying suggestion generator backend in the configuration file.
+	* Implement NullAnalyzer and SuggestionGeneratorNull.
 
 2010-03-01 Harri Pitkänen <hatapitk@iki.fi>
 	* Recognize more Unicode characters as letters.
